<resources>
    <string name="app_name">Github User</string>
    <string name="search_hint">Search someone in Github</string>
    <string name="user_image">Ava User</string>
    <string name="user_name">(%s)</string>
    <string name="user_repo">Repository</string>
    <string name="response_failure">"response.IsNotSuccess"</string>
    <string name="error1">"onFailure1"</string>
    <string name="error2">onFailure2</string>
    <string name="error3">onFailure3</string>
    <string name="user_login">User Login</string>
    <string name="user_company">"Company"</string>
    <string name="user_location">"Location"</string>
    <string name="is">: </string>
    <string name="insert_success">Added to Favorite</string>
    <string name="remove_success">Deleted from Favorite</string>
    <string name="remove_all_success">All Favorite Removed</string>
    <string name="favorite_icon">Favorite</string>
    <string name="setting_icon">Setting</string>
    <string name="remove_favorite_title">Remove from Favorite</string>
    <string name="remove_all_favorite_title">Remove All from Favorite</string>
    <string name="remove_favorite_message">Do you want to remove this user from Favorite?</string>
    <string name="remove_all_favorite_message">Do you want to remove all user from Favorite?</string>
    <string name="favorite_already_empty">Favorite User is already empty</string>
    <string name="no_favorite">You Have No Favorite User</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="undo">Undo</string>
    <string name="empty">-</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="clear_favorite">Clear All Favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_message">Hi!. This is Daily Notification</string>

    <!-- notification -->
    <string name="channel_id">Channel_1</string>
    <string name="channel_name">alarm_notification_channel</string>

    <!-- Preference Key -->
    <string name="notification_key">notification_key</string>
    <string name="language_key">language_key</string>

    <!-- Preference Titles -->
    <string name="notification_title">Notification</string>
    <string name="language_title">Language</string>

    <!-- Summary Preferences -->
    <string name="notification_summary">Notify to Back to Application at 9 A.M</string>
    <string name="language_summary">Change Language Setting</string>

</resources>
