<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                tools:context=".UserDetailActivity">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/user_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:hint="@string/user_login"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/user_image"
                    app:layout_constraintTop_toTopOf="@+id/user_image" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:hint="@string/user_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/user_image"
                    app:layout_constraintTop_toBottomOf="@+id/user_login" />

                <TextView
                    android:id="@+id/tv_user_repository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_repo"
                    app:layout_constraintStart_toEndOf="@+id/user_image"
                    app:layout_constraintTop_toBottomOf="@+id/user_name" />

                <TextView
                    android:id="@+id/user_repository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/is"
                    app:layout_constraintEnd_toEndOf="@+id/user_login"
                    app:layout_constraintStart_toEndOf="@+id/tv_user_repository"
                    app:layout_constraintTop_toBottomOf="@+id/user_name" />


                <TextView
                    android:id="@+id/user_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/is"
                    app:layout_constraintEnd_toEndOf="@+id/user_repository"
                    app:layout_constraintStart_toStartOf="@+id/user_repository"
                    app:layout_constraintTop_toBottomOf="@+id/user_repository" />

                <TextView
                    android:id="@+id/tv_user_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@string/user_company"
                    app:layout_constraintStart_toEndOf="@+id/user_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_repository" />

                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/is"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_user_location"
                    app:layout_constraintEnd_toEndOf="@+id/user_company"
                    app:layout_constraintStart_toStartOf="@+id/user_company" />

                <TextView
                    android:id="@+id/tv_user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@string/user_location"
                    app:layout_constraintStart_toEndOf="@+id/user_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_company" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    style="@style/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_location">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/user_tab_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/user_view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                        </androidx.viewpager.widget.ViewPager>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="32dp"
                android:src="@drawable/not_favorite"
                android:backgroundTint="@color/colorPrimaryDark"
                android:focusable="true" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.core.widget.NestedScrollView>
</layout>